exports[`test renderer should render table of contents 1`] = `
<div>
  <div>
    <div>
      <input
        onChange={[Function]}
        placeholder="Filter by name"
        value="foo" />
    </div>
  </div>
</div>
`;

exports[`test should filter list when search field contains a query 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
        },
        Object {
          "name": "Input",
        },
        Object {
          "name": "Textarea",
        },
      ]
    } />
</_class>
`;

exports[`test should filter list when search field contains a query 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="but">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
        },
      ]
    } />
</_class>
`;

exports[`test should filter section names 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                        },
                        Object {
                          "name": "Textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
        },
      ]
    } />
</_class>
`;

exports[`test should filter section names 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="frm">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a filtered list, should hide empty sections 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                        },
                        Object {
                          "name": "Textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a filtered list, should hide empty sections 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="inp">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a renderer 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
        },
        Object {
          "name": "Input",
        },
        Object {
          "name": "Textarea",
        },
      ]
    } />
</_class>
`;

exports[`test should render renderer with sections with nested components 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                        },
                        Object {
                          "name": "Textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
        },
      ]
    } />
</_class>
`;
